@@ -54,6 +54,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
              <version>3.11.0</version>
              <configuration>
                 <compilerArgs>
+                    <arg>--add-modules</arg><arg>jdk.incubator.code</arg>
                     <arg>--enable-preview</arg>
                     <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
                     <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
